# 4-BSMAT-GSG

./: App.tsx  Documentation_Gardes_Services.md  README.md  constants.ts  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  tailwind.config.js  types.ts  walkthrough.md
components/: ConfirmModal.tsx  Layout.tsx  TitleBar.tsx
contexts/: AuthContext.tsx
pages/: Dashboard.tsx  Exceptions.tsx  Login.tsx  Personnel.tsx  Planning.tsx  Settings.tsx  Users.tsx
services/: algorithmService.ts  db.ts  storageService.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: app-capability.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/pages/: Planning.tsx
